--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 
 <body>
 <script defer src="https://api-maps.yandex.ru/2.1/?apikey=2f32391c-7d88-4464-b471-b7c90e867ce9&lang=ru_RU"
-        type="text/javascript">
-    <script defer src="https://cdn.emailjs.com/dist/email.min.js"></script>
-
+        type="text/javascript"></script>
+<script defer src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script defer src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script defer src="script.js"></script>
-
 
 <header class="header">
     <div class="container header__container">
@@ -294,12 +293,12 @@
 
                     <div class="about-services__card">
                         <h3>
-                           <span>
-                               Мы поддерживаем     ИТ – инфраструктуру своих заказчиков
-                           </span>
+                               <span>
+                                   Мы поддерживаем     ИТ – инфраструктуру своих заказчиков
+                               </span>
                             <span class="highlight-text">
-                               и принимает активное участие в ее развитии
-                           </span>
+                                   и принимает активное участие в ее развитии
+                               </span>
                         </h3>
                     </div>
                 </div>
@@ -329,39 +328,39 @@
                               method="post"
                         >
 
-                        <div class="wrapper-input">
-                            <div class="custom-input">
-                                <input id="name" name="name" type="text" placeholder="Ваше имя"/>
-                                <label for="name" class="label-inner">Ваше имя</label>
-                                <button class="clear-input" type="button" tabindex="-1">
-                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                         stroke="currentColor"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M9.16992 14.83L14.8299 9.17004" stroke-width="1.5"
-                                              stroke-linecap="round" stroke-linejoin="round"/>
-                                        <path d="M14.8299 14.83L9.16992 9.17004" stroke-width="1.5"
-                                              stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                                </button>
+                            <div class="wrapper-input">
+                                <div class="custom-input">
+                                    <input id="name" name="name" type="text" placeholder="Ваше имя"/>
+                                    <label for="name" class="label-inner">Ваше имя</label>
+                                    <button class="clear-input" type="button" tabindex="-1">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                             stroke="currentColor"
+                                             xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M9.16992 14.83L14.8299 9.17004" stroke-width="1.5"
+                                                  stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M14.8299 14.83L9.16992 9.17004" stroke-width="1.5"
+                                                  stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </button>
+                                </div>
+
+                                <div class="custom-input">
+                                    <input id="email" name="email" type="text" placeholder="Email"/>
+                                    <label for="email" class="label-inner">Email</label>
+                                    <button class="clear-input" type="button" tabindex="-1">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                             stroke="currentColor"
+                                             xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M9.16992 14.83L14.8299 9.17004" stroke-width="1.5"
+                                                  stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M14.8299 14.83L9.16992 9.17004" stroke-width="1.5"
+                                                  stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </button>
+                                </div>
                             </div>
 
-                            <div class="custom-input">
-                                <input id="email" name="email" type="text" placeholder="Email"/>
-                                <label for="email" class="label-inner">Email</label>
-                                <button class="clear-input" type="button" tabindex="-1">
-                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                         stroke="currentColor"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M9.16992 14.83L14.8299 9.17004" stroke-width="1.5"
-                                              stroke-linecap="round" stroke-linejoin="round"/>
-                                        <path d="M14.8299 14.83L9.16992 9.17004" stroke-width="1.5"
-                                              stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                                </button>
-                            </div>
-                        </div>
-
-                        <button type="submit"  class="feedback-button highlight-button">Отправить</button>
+                            <button type="submit" class="feedback-button highlight-button">Отправить</button>
                         </form>
                     </div>
                 </div>
@@ -369,14 +368,15 @@
         </div>
     </section>
 
-    <!--        <div class="map">-->
-    <!--            <iframe-->
-    <!--                    src="https://yandex.ru/map-widget/v1/?um=constructor%3Ada7c5802ffae5764d08c2265001107ac2d1ff435584e89340d1bfc452edaa5bb&amp;source=constructor"-->
-    <!--                    width="100%" height="400" frameborder="0"></iframe>-->
-    <!--        </div>-->
+    <div id="map" style="width: 100%; height: 540px">
+        <div class="custom-balloon">
+            <div class="inner-balloon">
+                <img src="./assets/icons/location.svg"/>
+                <div class="highlight-text">119034, Россия,Москва, <br/> пер. Кропоткинский, 4</div>
+            </div>
 
-
-    <div id="map" style="width: 100%; height: 540px"></div>
+        </div>
+    </div>
 </main>
 <footer class="footer">
     <div class="container">
@@ -386,9 +386,6 @@
         </div>
     </div>
 </footer>
-
-</script>
-
 
 </body>
 </html>
