--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h2>Комплексный <span class="highlight-text">консалтинг в ИТ</span></h2>
                 <ul class="services-list">
                     <li class="services-item">
-                        <img class="services-image" src="./assets/images/services-1.png"/>
+                        <img class="services-image" src="./assets/images/services-1.webp"/>
                         <h3 class="services-item__title">
                             <span>Оказываем</span>
                             <span class="highlight-text">услуги по</span>
@@ -81,7 +81,7 @@
                     </li>
 
                     <li class="services-item">
-                        <img class="services-image" src="./assets/images/services-2.png"/>
+                        <img class="services-image" src="./assets/images/services-2.webp"/>
                         <h3 class="services-item__title">
                             <span>Помогаем </span>
                             <span class="highlight-text">формировать</span>
@@ -93,7 +93,7 @@
                     </li>
 
                     <li class="services-item">
-                        <img class="services-image" src="./assets/images/services-3.png"/>
+                        <img class="services-image" src="./assets/images/services-3.webp"/>
                         <h3 class="services-item__title">
                             <span>Формируем проекты</span>
                             <span class="highlight-text">для получения</span>
